# console_calc

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: calculator.h  checker.h  parser.h  printer.h  runner.h  task.h
src/: calculator.cpp  checker.cpp  main.cpp  parser.cpp  printer.cpp  runner.cpp
